--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -2,6 +2,7 @@ auth.accountLockedThreshold=5
 auth.accountLockedPeriod=30
 auth.maxAgeSeconds=315360000
 auth.includeSubdomains=true
+auth.contentSecurityPolicy=default-src 'self' *.tools.publicis.sapient.com *.publicissapient.com; connect-src 'self' *.tools.publicis.sapient.com *.publicissapient.com
 auth.cookie.duration=86400
 auth.cookie.domain=tools.publicis.sapient.com
 auth.cookie.isSameSite=true
