--- a/central-auth-service/authapi/pom.xml
+++ b/central-auth-service/authapi/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>authapi</artifactId>
 	<groupId>com.publicissapient.kpidashboard.apis</groupId>
-	<version>2.0.0</version>
+	<version>2.0.2</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -392,7 +392,7 @@
 							<goal>build</goal>
 						</goals>
 						<configuration>
-							<dockerfile>src/Dockerfile</dockerfile>
+							<dockerfile>Dockerfile</dockerfile>
 							<repository>${final.name}</repository>
 							<tag>${project.version}</tag>
 							<buildArgs>
