--- a/UI/nginx/files/nginx-dev.conf
+++ b/UI/nginx/files/nginx-dev.conf
@@ -19,7 +19,7 @@ server
         font/woff2                 max;
         font/otf                   max;
     }
-    
+
 server
 {
     listen 443 ssl default_server;
@@ -66,7 +66,7 @@ server
         index  index.html index.htm;
         add_header X-Frame-Options "SAMEORIGIN";
         add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
-        add_header Content-Security-Policy "default-src 'self' https://www.googletagmanager.com https://cdn.form.io 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com;font-src 'self' https://fonts.gstatic.com;img-src 'self' data:;connect-src 'self' https://region1.google-analytics.com https://www.google-analytics.com;";
+        add_header Content-Security-Policy "default-src 'self' *.tools.publicis.sapient.com *.publicissapient.com https://www.googletagmanager.com https://cdn.form.io 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;style-src-elem 'self' 'unsafe-inline' https://fonts.googleapis.com;font-src 'self' https://fonts.gstatic.com;img-src 'self' data:;connect-src 'self' *.tools.publicis.sapient.com *.publicissapient.com https://region1.google-analytics.com https://www.google-analytics.com;";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy "strict-origin";
