--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -3760,5 +3760,16 @@
       "definition": "All issue types that are used as/equivalent to Story."
     },
     "mandatory": true
+  },
+  {
+    "fieldName": "thresholdValueKPI180",
+    "fieldLabel": "Target KPI Value",
+    "fieldType": "number",
+    "section": "Project Level Threshold",
+    "fieldDisplayOrder": 1,
+    "sectionOrder": 6,
+    "tooltip": {
+      "definition": "Target KPI value denotes the bare minimum a project should maintain for a KPI. User should just input the number and the unit like percentage, hours will automatically be considered. If the threshold is empty, then a common target KPI line will be shown"
+    }
   }
 ]
