--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -36,6 +36,7 @@ auth.baseUiUrl=https://dev-authnauth.tools.publicis.sapient.com
 #Purpose of properties : central auth backend url
 #possible values : http://authnauth:8787 , http://localhost:8787
 #used in/for : saml login , redirect and validate request
+AUTH_BASE_URL=https://dev1-authnauth.tools.publicis.sapient.com
 auth.loginView=login_view
 auth.logoutView=logout_view
 auth.mailTemplate.Access_Request=Access_Request_Template
