kpi pr SuccessRateServiceImpl

--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -399,6 +399,7 @@ isGitlabFieldEnable=true
 #repo tool urls
 repoToolReworkRateUrl=/metric/rework-rate-bulk/
 repoToolRevertRateUrl=/metric/revert-rate-bulk/
+repoToolPRSuccessRateUrl=/metric/success-rate-bulk/
 repoToolPRSizeUrl=/metric/pr-size-bulk/
 repoToolPickupTimeUrl=/metric/pickup-time-bulk/
 repoToolMeanTimeToMergeUrl=/metric/mr-life-cycle-bulk/
