--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -404,6 +404,7 @@ repoToolPRSizeUrl=/metric/pr-size-bulk/
 repoToolPickupTimeUrl=/metric/pickup-time-bulk/
 repoToolMeanTimeToMergeUrl=/metric/mr-life-cycle-bulk/
 repoToolCodeCommmitsUrl=/metric/repo-activity-bulk/
+repoToolPRDeclineRateUrl=/metric/decline-rate-bulk/
 repoToolDeleteProjectUrl=/project/delete/%s/?only_data=%s
 repoToolDeleteRepoUrl=/project/delete/%s/%s
 repoToolEnrollProjectUrl=/beta/repositories/
