--- a/central-auth-service/central-login-ui-react/nginx/nginx_prod.conf
+++ b/central-auth-service/central-login-ui-react/nginx/nginx_prod.conf
@@ -48,7 +48,7 @@ http {
         server_name localhost;
 
         location /api/ {
-            proxy_pass   http://authnauth:8787;
+            proxy_pass   http://API_HOST:API_PORT;
             proxy_connect_timeout       1000;
             proxy_send_timeout          1000;
             proxy_read_timeout          1000;
