--- a/central-auth-service/central-login-ui-react/nginx/nginx_prod.conf
+++ b/central-auth-service/central-login-ui-react/nginx/nginx_prod.conf
@@ -49,6 +49,7 @@ http {
 
         location /api/ {
             proxy_pass   http://API_HOST:API_PORT;
+            proxy_set_header Host $host;
             proxy_connect_timeout       1000;
             proxy_send_timeout          1000;
             proxy_read_timeout          1000;
