--- a/central-auth-service/central-login-ui-react/nginx/nginx_dev.conf
+++ b/central-auth-service/central-login-ui-react/nginx/nginx_dev.conf
@@ -64,7 +64,8 @@ http {
         expires $expires;
         
     location /api/ {
-        proxy_pass   http://authnauth:8787;
+        proxy_pass   http://API_HOST:API_PORT;
+        proxy_set_header Host $host;
         proxy_connect_timeout       1000;
         proxy_send_timeout          1000;
         proxy_read_timeout          1000;
