--- a/processors/bamboo/pom.xml
+++ b/processors/bamboo/pom.xml
@@ -23,7 +23,7 @@
 	<description>bamboo processor</description>
 	<packaging>jar</packaging>
 	<artifactId>bamboo-processor</artifactId>
-	<version>10.0.0-SNAPSHOT</version>
+	<version>10.1.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -264,6 +264,6 @@
 
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>10.1.0</tag>
 	</scm>
 </project>
