--- a/processors/jira/pom.xml
+++ b/processors/jira/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>jira-processor</artifactId>
 	<description>Jira processor fetches data from JIRA api</description>
-	<version>10.0.0-SNAPSHOT</version>
+	<version>10.1.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -595,6 +595,6 @@
 	</build>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>10.1.0</tag>
 	</scm>
 </project>
