--- a/processors/argocd/pom.xml
+++ b/processors/argocd/pom.xml
@@ -23,7 +23,7 @@
 	<description>ArgoCD Processor</description>
 	<packaging>jar</packaging>
 	<artifactId>argocd-processor</artifactId>
-	<version>10.1.0</version>
+	<version>10.1.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -143,6 +143,6 @@
 	</dependencies>
 
 	<scm>
-		<tag>10.1.0</tag>
+		<tag>4.6.1</tag>
 	</scm>
 </project>
