Revert "Merge branch 'central-hierarchy-id-changes' of https://github.com/PublicisSapient/PSknowHOW into central-hierarchy-id-changes"
This reverts commit 43c442f63925ebbbd21fa04df89d2a7cb60c495d, reversing
changes made to b6b1640a07c082f5f59810f62ca17b9487f63598.

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #datasource
 #NeededToUpdate
-spring.datasource.url=jdbc:postgresql://postgres-auth-scm:5432/authNauth
+spring.datasource.url=jdbc:postgresql://localhost:5432/authNauth
 spring.datasource.username=authdb
 #NeededToUpdate
-spring.datasource.password=
+spring.datasource.password=authdb
 spring.jpa.properties.hibernate.default_schema=auth
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
@@ -20,30 +20,31 @@ auth.authenticationProviders=SAML,STANDARD
 auth.accountLockedThreshold=5
 auth.expirationTime=172800000
 auth.accountLockedPeriod=30
+
 #Purpose of properties :secret used for JWT token decode
 #possible values : secret key
 #NeededToUpdate
-auth.secret=
+auth.secret=3106dd9eee424487884363ce026ea979
 
 #Purpose of properties : central auth backend url
 #possible values : http://authnauth:8787 , http://localhost:8787
 #used in/for : saml login , redirect and validate request
 #NeededToUpdate
-auth.baseUrl=http://authnauth:8787
+auth.baseUrl=http://localhost:8787
 
 #Purpose of properties : central auth frontend url/domain Name
 #possible values : http://localhost:3000
 #used in/for : back to frontend redirect
 #NeededToUpdate
-auth.baseUiUrl=
+auth.baseUiUrl=http://localhost:3000
 
 #Purpose of properties : saml login details start
 
 #NeededToUpdate : Saml info update Start
-auth.holdingEntityId=
-auth.assertingEntityId=
-auth.alias=
-auth.samlLoginUrl=
+auth.holdingEntityId=spn:ca57b740-23eb-462b-bc9d-4ebd4d3bb4a5
+auth.assertingEntityId=https://sts.windows.net/d52c9ea1-7c21-47b1-82a3-33a74b1f74b8/
+auth.alias=ps-ad
+auth.samlLoginUrl=https://login.microsoftonline.com/d52c9ea1-7c21-47b1-82a3-33a74b1f74b8/federationmetadata/2007-06/federationmetadata.xml?appid=ca57b740-23eb-462b-bc9d-4ebd4d3bb4a5
 #NeededToUpdate : Saml info update End
 
 spring.security.saml2.serviceProvider.alias=${auth.alias}
@@ -156,7 +157,7 @@ auth.subDomainCookie=true
 #Purpose of property : auth service is on then added to parent domain
 #possible values : example.com , tools.publicis.sapient.com , localhost for local system
 #NeededToUpdate
-auth.domain=
+auth.domain=localhost
 #http only cookie -end
 
 #Purpose of properties : property used to provide valid origin
