Reapply "Merge branch 'central-hierarchy-id-changes' of https://github.com/PublicisSapient/PSknowHOW into central-hierarchy-id-changes"
This reverts commit 4a5b9d8872ccc0f32f63acda048c21b87a1baae2.

--- a/central-auth-service/central-login-ui-react/.env
+++ b/central-auth-service/central-login-ui-react/.env
@@ -1,4 +1,4 @@
-REACT_APP_DNS=http://localhost:8787
-REACT_APP_PSKnowHOW=http://localhost:4200
-REACT_APP_SPEED_SUITE=false
+REACT_APP_PSKnowHOW=
+REACT_APP_DNS=
+REACT_APP_SPEED_SUITE=
 REACT_APP_LOGIN_BUTTON_TEXT=
