--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -17,13 +17,11 @@
 #################################################################################
 
 
-management.health.ldap.enabled=false
-
 ## MongoDB related properties - Start
 
 # Local MongoDB Connection Properties
 #NeededToUpdate
-spring.data.mongodb.uri=mongodb://devadmin:devadmin@localhost:27017/kpidashboard
+spring.data.mongodb.uri=mongodb://devadmin:""@localhost:27017/kpidashboard
 
 # MongoDB Atlas URI
 spring.data.mongodb.atlas.uri=mongodb+srv://testuser:""@cluster/kpidashboard
@@ -197,13 +195,13 @@ auth.expirationTime=10800000
 #Purpose of properties :secret used for JWT token decode
 #possible values : secret key
 #NeededToUpdate
-auth.secret=3106dd9eee424487884363ce026ea979
+auth.secret=
 auth.authenticationProviders=LDAP,STANDARD,SAML
 
 #Purpose of properties : base64 encoded string for decode password
 #possible values : aesEncryptionKey
 #NeededToUpdate
-aesEncryptionKey=708C150A5363290AAE3F579BF3746AD5
+aesEncryptionKey=
 
 #Purpose of properties: key for exposed apis
 #possible values: api key encrypted using aes encryption
@@ -240,7 +238,7 @@ auth.centralAuthBaseURL=
 #token created date : 2024-03-01
 #tokenValidity : 2024-05-
 #NeededToUpdate
-auth.resourceAPIKey=vEWMXjRb/tk7g8i8lByX9Bn7pI87wYX7
+auth.resourceAPIKey=
 
 #Purpose of property : which email domain user allowed in system
 #possible values : example.com , publicissapient.com , gmail.com
