--- a/processors/azure-boards/pom.xml
+++ b/processors/azure-boards/pom.xml
@@ -361,7 +361,7 @@
 				<executions>
 					<execution>
 						<id>build</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
