--- a/central-auth-service/authapi/pom.xml
+++ b/central-auth-service/authapi/pom.xml
@@ -189,7 +189,7 @@
 				<executions>
 					<execution>
 						<id>build</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
