--- a/customapi/pom.xml
+++ b/customapi/pom.xml
@@ -549,7 +549,7 @@
 				<executions>
 					<execution>
 						<id>build</id>
-						<phase>deploy</phase>
+						<phase>install</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
