--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -399,6 +399,8 @@ repoToolPRSizeUrl=/metric/pr-size-bulk/
 repoToolPickupTimeUrl=/metric/pickup-time-bulk/
 repoToolMeanTimeToMergeUrl=/metric/mr-life-cycle-bulk/
 repoToolCodeCommmitsUrl=/metric/repo-activity-bulk/
+innovationRateUrl=/metric/innovation-rate-bulk/
+defectRateUrl=/metric/defect-rate-bulk/
 repoToolDeleteProjectUrl=/project/delete/%s/?only_data=%s
 repoToolDeleteRepoUrl=/project/delete/%s/%s
 repoToolEnrollProjectUrl=/beta/repositories/
