--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -3768,7 +3768,7 @@
     "fieldName" : "thresholdValueKPI185",
     "fieldLabel" : "Target KPI Value",
     "fieldType" : "number",
-    "section" : "Custom Fields Mapping",
+    "section" : "Project Level Threshold",
     "tooltip" : {
       "definition" : "Target KPI value denotes the bare minimum a project should maintain for a KPI. User should just input the number and the unit like percentage, hours will automatically be considered. If the threshold is empty, then a common target KPI line will be shown"
     }
@@ -3777,7 +3777,7 @@
     "fieldName" : "thresholdValueKPI186",
     "fieldLabel" : "Target KPI Value",
     "fieldType" : "number",
-    "section" : "Custom Fields Mapping",
+    "section" : "Project Level Threshold",
     "tooltip" : {
       "definition" : "Target KPI value denotes the bare minimum a project should maintain for a KPI. User should just input the number and the unit like percentage, hours will automatically be considered. If the threshold is empty, then a common target KPI line will be shown"
     }
