sonar path update

--- a/UI/sonar-project.properties
+++ b/UI/sonar-project.properties
@@ -33,4 +33,4 @@ sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslintconfigpath=tslint.json
 sonar.typescript.lcov.reportPaths=coverage/report-lcov/lcov.info
 sonar.coverage.exclusions=**/app/features/config/project-config/project-config.route.ts,**/main.ts,**/karma.conf.js,**/app/shared/directives/external-url.directive.ts,**/environments/*,**/app/features/dashboard/maturity/*,**/app/core/services/*,**/app/shared/component/**/*,**/app/model/*,**/app/core/configs/*,**/app/shared/module/*,**/app/features/dashboardv2/filter-v2/filter-new.component.ts
-sonar.cpd.exclusions=**/app/dashboard/quality/*.html,**/app/dashboard/productivity/*.html,**/app/dashboard/executive/*.html
+sonar.cpd.exclusions=**/app/features/dashboard/executive/*.html
