Repository configuration change
Change log:
Removing Priyanak's id for now as flagged by Github (Write permission issues)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # Global rule:
-* @manoj-srivastava @hirbabar @gipathak @ananthpal @prijain3 @Chittauri
+* @manoj-srivastava @hirbabar @gipathak @ananthpal @Chittauri
 
 # UI code owners:
 /UI/** 	@risshukl0 @prabasak23
