Repository configuration change
Change log:
Adding more default reviewers for UI module

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 * @manoj-srivastava @hirbabar @gipathak @ananthpal @Chittauri
 
 # UI code owners:
-/UI/** 	@risshukl0 @prabasak23
+/UI/** 	@risshukl0 @prabasak23 @spal-sapient @ananthpal
