Redis Cache POC
Change log:
POC to use Redis Cache instead of ehcache

--- a/customapi/pom.xml
+++ b/customapi/pom.xml
@@ -130,6 +130,10 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
