--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 * @manoj-srivastava @hirbabar @gipathak @Chittauri @prijain3 @ananthpal
 
 # UI code owners:
-/UI/** 	@risshukl0 @prabasak23 @spal-sapient @prijain3 @ananthpal
+/UI/** 	@risshukl0 @brahmanand1 @prabasak23 @spal-sapient @prijain3 @ananthpal
