DTS-39650 : 1.) Changed one Backlog count by status field to multiInput field. 2.) Updated Itr readiness field label name. 3.) Backward compatibility script

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -1407,7 +1407,7 @@
   {
     "fieldName": "jiraDefectRejectionStatusKPI151",
     "fieldLabel": "Status to identify rejected defects",
-    "fieldType": "text",
+    "fieldType": "chips",
     "fieldCategory": "workflow",
     "section": "WorkFlow Status Mapping",
     "fieldDisplayOrder": 2,
@@ -3584,7 +3584,7 @@
   },
   {
     "fieldName": "jiraStatusForRefinedKPI161",
-    "fieldLabel": "Status to identify In Refined issues",
+    "fieldLabel": "Status to identify In Ready For Dev",
     "section": "WorkFlow Status Mapping",
     "fieldType": "chips",
     "fieldCategory": "workflow",
