Mail sent Via SMTP (without Kafka Serivce)
Signed-off-by: Hirenkumar babariya <99163630+hirbabar@users.noreply.github.com>

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -73,7 +73,7 @@ notification.switch=true
 #Purpose of properties : property used to send mail via kafka or smtp
 #possible values : true for smtp , false for kafka
 #used in/for : sent mail
-auth.mailWithoutKafka=false
+auth.mailWithoutKafka=true
 
 #Kafka related Properties - Start
 #Purpose of properties : property used to send mail via kafka
