Fixathon: Rename fieldLabel of unlinkworkitem kpi Change-log:Rename FieldMapping of UnlinkedWorkItems KPI

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -499,7 +499,7 @@
   },
   {
     "fieldName": "jiraStoryIdentificationKPI129",
-    "fieldLabel": "Issue types to consider",
+    "fieldLabel": "Issue types to consider as Stories",
     "fieldDisplayOrder": 1,
     "fieldType": "chips",
     "fieldCategory": "Issue_Type",
