--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -768,14 +768,14 @@
   },
   {
     "fieldName": "jiraIssueTypeKPI171",
-    "fieldLabel": "Issue types to consider ‘Completed status’",
+    "fieldLabel": "Issue types to consider",
     "fieldCategory": "Issue_Type",
     "fieldType": "chips",
     "section": "Issue Types Mapping",
     "fieldDisplayOrder": 1,
     "sectionOrder": 2,
     "tooltip": {
-      "definition": "All issue types that should be included in Lead time calculation."
+      "definition": "All issue types considered for Cycle calculation"
     }
   },
   {
@@ -2618,14 +2618,14 @@
   },
   {
     "fieldName": "jiraDodKPI171",
-    "fieldLabel": "Status to identify completed issues",
+    "fieldLabel": "Status to identify DOD",
     "fieldType": "chips",
     "fieldCategory": "workflow",
-    "fieldDisplayOrder": 8,
+    "fieldDisplayOrder": 3,
     "sectionOrder": 4,
     "section": "WorkFlow Status Mapping",
     "tooltip": {
-      "definition": "All workflow statuses used to identify completed issues based on Definition of Done (DoD)."
+      "definition": "Workflow status/es to identify when an issue is delivered based on Definition of Done (DOD)"
     },
     "mandatory": true
   },
@@ -2704,14 +2704,15 @@
   },
   {
     "fieldName": "jiraLiveStatusKPI171",
-    "fieldLabel": "Live Status - Cycle Time",
+    "fieldLabel": "Status to identify Live issues",
     "fieldCategory": "workflow",
     "fieldType": "chips",
     "section": "WorkFlow Status Mapping",
     "tooltip": {
-      "definition": "Status/es that identify that an issue is LIVE in Production'"
+      "definition": "Workflow status/es to identify that an issue is live in Production"
     },
-    "mandatory": true
+    "mandatory": true,
+    "fieldDisplayOrder" : 4
   },
   {
     "fieldName": "jiraSprintVelocityIssueTypeBR",
@@ -2775,14 +2776,15 @@
   },
   {
     "fieldName": "jiraDorKPI171",
-    "fieldLabel": "DOR status",
+    "fieldLabel": "Status to identify DOR",
     "fieldType": "chips",
     "fieldCategory": "workflow",
     "section": "WorkFlow Status Mapping",
     "tooltip": {
-      "definition": "Status/es that identify that an issue is ready to be taken in the sprint"
+      "definition": "Workflow status/es that identify that a backlog item is ready to be taken in a sprint based on Definition of Ready (DOR)"
     },
-    "mandatory": true
+    "mandatory": true,
+    "fieldDisplayOrder" : 2
   },
   {
     "fieldName": "includeRCAForKPI135",
@@ -3023,14 +3025,15 @@
   },
   {
     "fieldName": "storyFirstStatusKPI171",
-    "fieldLabel": "Status when 'Story' issue type is created",
+    "fieldLabel": "First Status when issue is created",
     "fieldType": "text",
     "fieldCategory": "workflow",
     "section": "WorkFlow Status Mapping",
     "tooltip": {
-      "definition": "All issue types that identify with a Story."
+      "definition": "Default first status of all issue types in consideration"
     },
-    "mandatory": true
+    "mandatory": true,
+    "fieldDisplayOrder" : 1
   },
   {
     "fieldName": "storyFirstStatusKPI148",
