--- a/UI/angular.json
+++ b/UI/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "preserveSymlinks":true,
             "allowedCommonJsDependencies": [
               "rxjs/internal/observable/timer",
               "exceljs",
