--- a/customapi/pom.xml
+++ b/customapi/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>customapi</artifactId>
 	<description>Rest API Layer</description>
-	<version>10.1.0-SNAPSHOT</version>
+	<version>11.0.0</version>
 	<packaging>jar</packaging>
 
 
@@ -624,7 +624,7 @@
 	</profiles>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>11.0.0</tag>
 	</scm>
 </project>
 
