--- a/processors/jenkins/pom.xml
+++ b/processors/jenkins/pom.xml
@@ -16,7 +16,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Jenkins Build Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>10.1.0-SNAPSHOT</version>
+	<version>11.0.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -199,7 +199,7 @@
 
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>11.0.0</tag>
 	</scm>
 </project>
 
