--- a/processors/azure-pipeline/pom.xml
+++ b/processors/azure-pipeline/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.publicissapient.kpidashboard</groupId>
     <description>Azure Pipeline Build Processor Microservice</description>
     <packaging>jar</packaging>
-    <version>11.0.0</version>
+    <version>11.0.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -218,6 +218,6 @@
 
 
     <scm>
-        <tag>11.0.0</tag>
+        <tag>4.6.1</tag>
     </scm>
 </project>
