Fixathon_defect-fix

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -3268,7 +3268,7 @@
   },
   {
     "fieldName": "jiraDefectRejectionStatusKPI155",
-    "fieldLabel": "Status to identify rejected issues",
+    "fieldLabel": "Ticket Rejected/Dropped Status",
     "fieldType": "text",
     "fieldCategory": "workflow",
     "section": "WorkFlow Status Mapping",
