if mandatory field not set up no data to be available

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -3149,7 +3149,8 @@
         }
       }
     ],
-    "processorCommon": true
+    "processorCommon": true,
+    "mandatory": true
   },
   {
     "fieldName": "ticketCountIssueType",
