DTS-41251: BE for outlier email
Change-log: mailing info of outlier detected

--- a/kafka-consumers/notification-consumer/src/main/resources/application.properties
+++ b/kafka-consumers/notification-consumer/src/main/resources/application.properties
@@ -23,6 +23,7 @@ mailTemplate.Approve_User_Reject=Approve_User_Reject_Template
 mailTemplate.Pre_Approval=Pre_Approval_Template
 mailTemplate.Forgot_Password=Forgot_Password_Template
 mailTemplate.Error_In_Jira_Processor=Error_In_Jira_Processor_Template
+mailTemplate.Outlier_In_Jira_Processor=Outlier_In_Jira_Processor_Template
 mailTemplate.User_Verification=User_Verification_Template
 mailTemplate.User_Verification_Failed=User_Verification_Failed_Template
 
