--- a/processors/jira/src/main/resources/application.properties
+++ b/processors/jira/src/main/resources/application.properties
@@ -100,6 +100,7 @@ kafka.mailtopic=mail-topic
 
 #Notification properties -Start
 jira.notificationSubject.errorInJiraProcessor=Error occured in Jira Processor
+jira.notificationSubject.outlierInJiraProcessor=Sprint Outlier Detected In Jira Processor
 notification.switch=true
 jira.domainNames=
 #Notification properties -End
@@ -108,6 +109,7 @@ flag.mailWithoutKafka=false
 
 #####mail key and template mapping#####
 jira.mailTemplate.Error_In_Jira_Processor=Error_In_Jira_Processor_Template
+jira.mailTemplate.Outlier_In_Jira_Processor=Outlier_In_Jira_Processor_Template
 #SAML auth required params
 samlTokenStartString=<input type="hidden" name="SAMLResponse" value="
 samlTokenEndString=/>
